deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: parcel-svg-snapshot
  namespace: fast-platform
  labels:
    platform: fast
    module: core
    domain: gis
    api: parcel-svg
    app: snapshot
spec:
  replicas: 2
  template:
    metadata:
      labels:
        platform: fast
        module: core
        domain: gis
        api: parcel-svg
        app: snapshot
    spec:
      containers:
      - name: snapshot
        image: eufast/parcel-svg-snapshot:0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 2
            memory: 2Gi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 5
